     Thanks to Hande Toffoli for reporting.
   * Usage of "~" in pseudo_dir is sometimes acceptable by fortran but not 
     by C. If so, a message is printed instead of weird characters in MD5.
   * PHonon: Gamma-specific code segfaulting with GGA
   * NaN's in stress with nonlocal functionals when the physical dimensions of
     FFT arrays is larger than the true ones and arrays are padided with zeros
   * pw.x: "task-group" parallelization wasn't working properly when the number
     of bands was smaller than the number of task groups. Affects v.5.2.1.
   * TDDFPT: lrpa (Random Phase Approximation) keyword was not present in 
     the namelist for turbo_lanczos.x code. 
   * pw.x: stress with TS-vdw wasn't correct - courtesy of Thomas Markovich

Incompatible changes in svn version:

   * Standard F2003 calls to: get_environment_variable, get_command_argument, 
     command_argument_count, flush, are used everywhere instead of wrappers.
     Some old compilers may no longer work and must be considered unsupported.
   * Old Fermi Surface plotting tools kvecs_FS.f, bands_FS.f90, in PW/tools/,
     replaced by new code PP/src/fermisurface.f90
   * Reshuffling of FFT-related modules: 
     "gather_*"  and "scatter_*" routines moved from module fft_base 
                                                  to module scatter_mod

New in 5.2.1 version:

   * svdW-DF, a proper spin version of vdW-DF (PRL 115, 136402 (2015);
     courtesy of Timo Thonhauser)
   * XSpectra: various improvements, extension to L_23 edges
   * ESM: various improvements, constant-bias (PRL 109, 266101 (2012))
     calculations for both pw.x and neb.x (courtesy of Minoru Otani)

Incompatible changes in 5.2.1 version:

   * "pot" parallelization level, no longer used, removed   
   * Obsolete calls to SCSL and SUNPERF library FFTs removed

Fixed in 5.2.1 version:

   * PW: incorrect calculation of maximum number of plane waves could lead 